--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "test": "test"
   },
   "scripts": {
+    "start": "node lev.js"
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
